<resources>
    <string name="app_name">Calculator(MAD_TUT_02)</string>
    <string name="number_01">Number 01</string>
    <string name="number_02">Number 02</string>
    <string name="ok">OK</string>
    <string name="enter_number_01">Enter Number 01</string>
    <string name="enter_number_02">Enter Number 02</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
</resources>
